# schunk_egu_egk_gripper

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md
.github/ISSUE_TEMPLATE/: general_issue.md
.github/script/: install_dependencies.sh
.github/workflows/: industrial_ci_humble_action.yml  industrial_ci_iron_action.yml  industrial_ci_jazzy_action.yml  industrial_ci_rolling_action.yml
LICENSES/: license_notice.cpp  license_notice.py
schunk_egu_egk_dummy/: main.py
schunk_egu_egk_dummy/src/: dummy.py
schunk_egu_egk_dummy/tests/: test_dummy.py
schunk_egu_egk_gripper_driver/: CMakeLists.txt  package.xml
schunk_egu_egk_gripper_driver/include/schunk_egu_egk_gripper_driver/: schunk_gripper_wrapper.hpp
schunk_egu_egk_gripper_driver/launch/: schunk.launch.py  schunk_launch.py  schunk_rqt.launch.py  schunk_rqt_launch.py
schunk_egu_egk_gripper_driver/src/: schunk_gripper_wrapper.cpp
schunk_egu_egk_gripper_dummy/: README.md  main.py  package.xml  setup.cfg  setup.py  start_dummy  start_dummy.sh
schunk_egu_egk_gripper_dummy/config/: README.md  __init__.py  data.json  enum.json  metadata.json  read_system_parameters.py  system_parameter_codes
schunk_egu_egk_gripper_dummy/schunk_egu_egk_gripper_dummy/: main.py
schunk_egu_egk_gripper_dummy/src/: dummy.py
schunk_egu_egk_gripper_dummy/tests/: test_dummy.py  test_plc_communication.py  test_requests.py  test_webserver.py
schunk_egu_egk_gripper_examples/: CMakeLists.txt  package.xml
schunk_egu_egk_gripper_examples/src/: gripper_example.cpp
schunk_egu_egk_gripper_interfaces/: CMakeLists.txt  README.md  package.xml
schunk_egu_egk_gripper_interfaces/action/: Grip.action  GripWithPosition.action  GripWithPositionAndVelocity.action  GripWithVelocity.action  MoveToAbsolutePosition.action  MoveToRelativePosition.action  ReleaseWorkpiece.action
schunk_egu_egk_gripper_interfaces/msg/: State.msg
schunk_egu_egk_gripper_interfaces/srv/: Acknowledge.srv  BrakeTest.srv  ChangeIp.srv  FastStop.srv  GripperInfo.srv  ParameterGet.srv  ParameterSet.srv  PrepareForShutdown.srv  ReleaseForManualMovement.srv  Softreset.srv
schunk_egu_egk_gripper_library/: CMakeLists.txt  README.md  package.xml  schunk_egu_egk_gripper_libraryConfig.cmake
schunk_egu_egk_gripper_library/include/schunk_egu_egk_gripper_library/: communication.hpp  schunk_gripper_lib.hpp
schunk_egu_egk_gripper_library/src/: communication.cpp  schunk_gripper_lib.cpp
schunk_egu_egk_gripper_library/third_party_licenses/: LICENSE.md
schunk_egu_egk_gripper_tests/: CMakeLists.txt  README.md  package.xml
schunk_egu_egk_gripper_tests/test/: conftest.py  helpers.py  test_actions.py  test_functionality.py  test_http_interface.py  test_launch.py  test_ros_interfaces.py  test_services.py  test_startup.py  test_topics.py
schunk_gripper_driver/: README.md  package.xml  setup.cfg  setup.py
schunk_gripper_driver/doc/: Modbus_WSL.md
schunk_gripper_driver/launch/: driver.launch.py
schunk_gripper_driver/schunk_gripper_driver/: driver.py
schunk_gripper_driver/schunk_gripper_driver/tests/: README.md  conftest.py  test_configuration.py  test_driver.py  test_launch.py  test_lifecycle_behavior.py  test_lifecycle_performance.py  test_log_size.py  test_logging.py  test_parameters.py  test_services.py  test_topics.py
schunk_gripper_driver/test/: conftest.py  test_launch.py  test_lifecycle_behavior.py  test_parameters.py  test_services.py
schunk_gripper_driver/tests/: README.md  conftest.py  test_driver.py  test_lifecycle_behavior.py  test_parameters.py  test_services.py
schunk_gripper_dummy/: MANIFEST.in  README.md  package.xml  setup.cfg  setup.py  start_dummy
schunk_gripper_dummy/config/: data.json
schunk_gripper_dummy/schunk_gripper_dummy/: dummy.py  main.py
schunk_gripper_dummy/schunk_gripper_dummy/config/: README.md  data.json  gripper_parameter_codes.json  read_gripper_parameters.py  read_system_parameters.py
schunk_gripper_dummy/schunk_gripper_dummy/tests/: README.md  test_dummy.py  test_motion_profile.py  test_plc_communication.py  test_requests.py  test_webserver.py
schunk_gripper_dummy/tests/: test_dummy.py  test_motion_profile.py  test_plc_communication.py  test_requests.py  test_webserver.py
schunk_gripper_interfaces/: CMakeLists.txt  README.md  package.xml
schunk_gripper_interfaces/msg/: Gripper.msg  GripperSpec.msg  GripperState.msg  KeyValue.msg
schunk_gripper_interfaces/srv/: AddGripper.srv  Grip.srv  ListDevices.srv  ListGrippers.srv  MoveToAbsolutePosition.srv  MoveToAbsolutePositionGPE.srv  Release.srv  Scan.srv  ShowConfiguration.srv  ShowGripperSpecification.srv
schunk_gripper_library/: MANIFEST.in  README.md  package.xml  setup.cfg  setup.py
schunk_gripper_library/schunk_gripper_library/: driver.py  utility.py
schunk_gripper_library/src/: driver.py
schunk_gripper_library/tests/: README.md  conftest.py  test_behavior.py  test_communication.py  test_control_operations.py  test_data_buffers.py  test_device_connection.py  test_scheduling.py  test_status_operations.py  test_threading.py
schunk_gripper_library/tmp/: client.py  server.py
src/schunk_gripper/: CMakeLists.txt  package.xml
src/schunk_gripper/action/: GripEgu.action  GripWithPosEgk.action  GripWithPosEgu.action  GripWithPosition.action  GripWithVel.action  MovAbsPos.action  MovRelPos.action  MoveToAbsolutePosition.action  MoveToRelativePosition.action  ReleaseWorkpiece.action
src/schunk_gripper/cfg/: gripper_parameter.cfg
src/schunk_gripper/config/: gripper.yaml
src/schunk_gripper/include/schunk_gripper/: communication.h  communication.hpp  schunk_gripper_lib.h  schunk_gripper_lib.hpp  schunk_gripper_wrapper.h  schunk_gripper_wrapper.hpp
src/schunk_gripper/launch/: schunk_launch.py  schunk_rqt_launch.py
src/schunk_gripper/msg/: DataTypesParameter.msg  State.msg
src/schunk_gripper/src/: client_egk.cpp  client_egu.cpp  communication.cpp  gripper_example.cpp  schunk_gripper_lib.cpp  schunk_gripper_wrapper.cpp
src/schunk_gripper/srv/: BrakeTest.srv  ChangeIp.srv  FastStop.srv  ParameterGet.srv  ParameterSet.srv  PrepareForShutdown.srv
(+24 files in other folders)
