<?xml version="1.0"?>
<package format="3">
  <name>schunk_egu_egk_gripper_library</name>
  <version>1.0.0</version>
  <description>Standalone C++ library for Schunk's EGU/EGK grippers</description>
  <author>Viktora Krimer</author>
  <author>Fabian Reinwald</author>
  <maintainer email="stefan.scherzinger@de.schunk.com">Stefan Scherzinger</maintainer>

  <license>todo</license>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>

</package>
