<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>schunk_egu_egk_gripper_tests</name>
  <version>1.0.0</version>
  <description>Unit and system tests for the schunk EGU/EGK grippers</description>
  <maintainer email="stefan.scherzinger@de.schunk.com">Stefan Scherzinger</maintainer>

  <license>GPL-3.0-or-later</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>schunk_egu_egk_gripper_driver</test_depend>
  <test_depend>schunk_egu_egk_gripper_dummy</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_pytest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
