<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>schunk_gripper_driver</name>
  <version>0.0.0</version>
  <description>ROS2 driver for SCHUNK`s EGU, EGK, and EZU mechatronic grippers</description>
  <maintainer email="stefan.scherzinger@de.schunk.com">stefan</maintainer>
  <license>GPL-3.0-or-later</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>schunk_gripper_library</depend>
  <depend>schunk_gripper_interfaces</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>launch_pytest</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
